<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/winter"
    android:orientation="vertical"
    android:padding="50dp">

    <RelativeLayout
        android:id="@+id/Layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="30dp">


        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/default_city"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/temp"
            android:textColor="@android:color/black"
            android:textSize="70sp"
            tools:ignore="UnknownId" />

        <TextView
            android:id="@+id/sky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp"
            android:gravity="center"
            android:padding="5dp"
            android:paddingBottom="10dp"
            android:text="@string/sky"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/dayNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/dayNight"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/input"
        android:inputType="text"
        android:textColorHint="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/send" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />
</LinearLayout>